Style deleted comments and fix profile overflow

--- a/client/stylesheets/comments.import.less
+++ b/client/stylesheets/comments.import.less
@@ -74,8 +74,13 @@
   height: 120px;
   overflow-y: hidden;
 }
+.comment.deleted {
+  background-color: #fafafa;
+  color: rgba(0, 0, 0, 0.5);
+}
 .comment.deleted .comment-content {
-  height: 140px;
+  height: 195px;
+  padding-top: 20px;
   cursor: default; 
 }
 .comment .comment-date {
